ajustes relatorio beneficio

--- a/src/reports/beneficio.jrxml
+++ b/src/reports/beneficio.jrxml
@@ -18,7 +18,7 @@ FROM cadastrobeneficios.beneficio
 	INNER JOIN cadastrobeneficios.inscrito ON 
 	 cadastrobeneficios.beneficio.inscrito_codigo = cadastrobeneficios.inscrito.codigo 
 WHERE 
-	 cadastrobeneficios.inscrito.nome = $P!{nome}]]>
+	 cadastrobeneficios.inscrito.nome = '$P!{nome}']]>
 	</queryString>
 	<field name="dataInicio" class="java.sql.Timestamp">
 		<property name="com.jaspersoft.studio.field.label" value="dataInicio"/>
@@ -143,7 +143,7 @@ WHERE
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Left" verticalAlignment="Middle">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Atividade]]></text>
