--- a/src/reports/inscrito.jrxml
+++ b/src/reports/inscrito.jrxml
@@ -165,7 +165,7 @@ ORDER BY cadastrobeneficios.inscrito.codigo ASC]]>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{pf}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField isBlankWhenNull="true">
 				<reportElement x="343" y="0" width="39" height="18" uuid="3cc11d81-81c9-456b-a4f9-2d398ff57ff4">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3da98d5d-5c0a-44f6-ae32-aba540accb18"/>
 				</reportElement>
