Finalizada autenticação PhaseListener usuário

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -52,6 +52,8 @@
 							outcome="/pages/relatorioBeneficio.xhtml" />
 						<p:menuitem value="Aniversariantes do mês"
 							outcome="/pages/relatorioAniversariantes.xhtml" />
+						<p:menuitem value="Inscrito por atividade"
+							outcome="/pages/relatorioAtividade.xhtml" />
 						<p:menuitem value="Inscritos"
 							outcome="/pages/relatorioInscrito.xhtml" />
 					</p:submenu>
