Finalizado geração de todos os relatórios jasper

--- a/WebContent/templates/modeloGeral.xhtml
+++ b/WebContent/templates/modeloGeral.xhtml
@@ -37,23 +37,23 @@
 					</p:submenu>
 
 					<p:submenu label="Cadastros">
-						<p:menuitem value="Atividades"
+						<p:menuitem value="Atividade"
 							outcome="/pages/atividadePesquisa.xhtml" />
-						<p:menuitem value="Beneficios"
+						<p:menuitem value="Beneficio"
 							outcome="/pages/beneficioPesquisa.xhtml" />
-						<p:menuitem value="Inscritos"
+						<p:menuitem value="Inscrito"
 							outcome="/pages/inscritoPesquisa.xhtml" />
-						<p:menuitem value="Usuários"
+						<p:menuitem value="Usuário"
 							outcome="/pages/usuarioPesquisa.xhtml" />
 					</p:submenu>
 
 					<p:submenu label="Relatórios">
 						<p:menuitem value="Atividades por inscrito"
-							outcome="/pages/manutencao.xhtml" />
+							outcome="/pages/relatorioBeneficio.xhtml" />
 						<p:menuitem value="Aniversariantes do mês"
 							outcome="/pages/relatorioAniversariantes.xhtml" />
 						<p:menuitem value="Inscrito por atividade"
-							outcome="/pages/manutencao.xhtml" />
+							outcome="/pages/relatorioAtividade.xhtml" />
 						<p:menuitem value="Inscritos"
 							outcome="/pages/relatorioInscrito.xhtml" />
 					</p:submenu>
