--- a/src/reports/atividade.jrxml
+++ b/src/reports/atividade.jrxml
@@ -20,21 +20,31 @@ FROM cadastrobeneficios.beneficio
 	INNER JOIN cadastrobeneficios.inscrito ON 
 	 cadastrobeneficios.beneficio.inscrito_codigo = cadastrobeneficios.inscrito.codigo 
 WHERE 
-	 cadastrobeneficios.inscrito.nome = '$P!{nome}']]>
+	 cadastrobeneficios.atividade.nome = '$P!{nome}']]>
 	</queryString>
 	<field name="dataInicio" class="java.sql.Timestamp">
+		<property name="com.jaspersoft.studio.field.label" value="dataInicio"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="beneficio"/>
 		<fieldDescription><![CDATA[dataInicio]]></fieldDescription>
 	</field>
 	<field name="diaDaSemana" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="diaDaSemana"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="beneficio"/>
 		<fieldDescription><![CDATA[diaDaSemana]]></fieldDescription>
 	</field>
 	<field name="horarioInicio" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.label" value="horarioInicio"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="beneficio"/>
 		<fieldDescription><![CDATA[horarioInicio]]></fieldDescription>
 	</field>
 	<field name="atividade" class="br.com.cadastrobeneficios.domain.Atividade">
+		<property name="com.jaspersoft.studio.field.label" value="atividade"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="atividade"/>
 		<fieldDescription><![CDATA[atividade]]></fieldDescription>
 	</field>
 	<field name="inscrito" class="br.com.cadastrobeneficios.domain.Inscrito">
+		<property name="com.jaspersoft.studio.field.label" value="inscrito"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="inscrito"/>
 		<fieldDescription><![CDATA[inscrito]]></fieldDescription>
 	</field>
 	<pageHeader>
@@ -55,14 +65,14 @@ WHERE
 				<textElement textAlignment="Center">
 					<font size="16"/>
 				</textElement>
-				<text><![CDATA[Listagem de Atividades]]></text>
+				<text><![CDATA[Listagem de Inscritos por Atividade]]></text>
 			</staticText>
 			<textField pattern="dd/MMMM/yyyy">
 				<reportElement x="446" y="30" width="100" height="30" uuid="53a9de0b-49f9-4e1b-b239-69c33dd204de"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<rectangle radius="14">
-				<reportElement mode="Transparent" x="1" y="2" width="549" height="59" uuid="af5d7aa4-e77c-49f2-b6f5-8f90cb60469f"/>
+				<reportElement mode="Transparent" x="3" y="2" width="549" height="59" uuid="af5d7aa4-e77c-49f2-b6f5-8f90cb60469f"/>
 				<graphicElement>
 					<pen lineStyle="Solid"/>
 				</graphicElement>
@@ -70,7 +80,7 @@ WHERE
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="55" splitType="Stretch">
+		<band height="65" splitType="Stretch">
 			<staticText>
 				<reportElement x="248" y="26" width="80" height="20" uuid="3b04332a-6964-41db-a302-9adec07baec3">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="399761a0-1144-42b4-b3da-8da43ae74337"/>
@@ -123,13 +133,6 @@ WHERE
 				<textElement verticalAlignment="Middle"/>
 				<text><![CDATA[Nome:]]></text>
 			</staticText>
-			<textField>
-				<reportElement mode="Opaque" x="40" y="0" width="508" height="20" forecolor="#FFFFFF" backcolor="#000000" uuid="ed92ce90-9385-4a56-9745-87e3a1d676b9">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6920374f-bc6e-48e3-9d2a-43829aaa33da"/>
-				</reportElement>
-				<textElement verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$F{inscrito}.getNome()]]></textFieldExpression>
-			</textField>
 			<staticText>
 				<reportElement x="0" y="26" width="248" height="20" uuid="ae8dce7d-dbd8-44c0-a858-2f2ac9630882">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0fccc1f8-ec6e-41d9-b087-eb19a1f63b23"/>
@@ -145,16 +148,22 @@ WHERE
 				</textElement>
 				<text><![CDATA[Atividade]]></text>
 			</staticText>
-			<staticText>
-				<reportElement x="276" y="0" width="100" height="30" uuid="7d585292-7392-42bf-8d11-7506dc5fe306">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0250ac8b-d1bc-4eaf-b76c-31f4176deb3f"/>
+			<textField>
+				<reportElement mode="Opaque" x="40" y="0" width="512" height="20" forecolor="#FFFFFF" backcolor="#000000" uuid="1fe92554-af83-4505-a197-673a254843f9">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0fccc1f8-ec6e-41d9-b087-eb19a1f63b23"/>
 				</reportElement>
-				<text><![CDATA[dataInicio]]></text>
-			</staticText>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textFieldExpression><![CDATA[$F{atividade}.getNome()]]></textFieldExpression>
+			</textField>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="37" splitType="Stretch">
+		<band height="40" splitType="Stretch">
 			<textField>
 				<reportElement x="328" y="0" width="120" height="20" uuid="74370841-f12b-4088-9c9a-8e8bce3f280a">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="9e786780-c4e0-4d8e-a2e0-75ed8f7115e0"/>
@@ -182,23 +191,18 @@ WHERE
 				<textFieldExpression><![CDATA[$F{horarioInicio}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="0" y="0" width="248" height="20" uuid="1fe92554-af83-4505-a197-673a254843f9">
-					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0fccc1f8-ec6e-41d9-b087-eb19a1f63b23"/>
-				</reportElement>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textFieldExpression><![CDATA[$F{atividade}.getNome()]]></textFieldExpression>
-			</textField>
-			<textField>
 				<reportElement stretchType="RelativeToBandHeight" x="248" y="0" width="82" height="20" uuid="c72cbbe1-b222-4572-b32e-dbfd8cf9b662">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="0250ac8b-d1bc-4eaf-b76c-31f4176deb3f"/>
 				</reportElement>
 				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{dataInicio}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement mode="Transparent" x="0" y="0" width="248" height="20" forecolor="#000000" backcolor="#FFFFFF" uuid="ed92ce90-9385-4a56-9745-87e3a1d676b9">
+					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="6920374f-bc6e-48e3-9d2a-43829aaa33da"/>
+				</reportElement>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{inscrito}.getNome()]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
